<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 By Geeks Empire.
  ~
  ~ Created by Elias Fazel on 1/30/20 4:30 PM
  ~ Last modified 1/29/20 2:50 PM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activitySettingGUI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.orientation.compasshd.Util.SettingGUI">

    <RelativeLayout
        android:id="@+id/allSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:background="@drawable/detail_preference_gui">

        <ImageView
            android:id="@+id/pickImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:padding="75dp"
            android:layout_margin="5dp"
            android:src="@drawable/pick_image" />

        <TextView
            android:id="@+id/error"
            android:layout_width="200dp"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@id/pickImage"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/red_bright_transparent"
            android:text="@string/remove"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_toEndOf="@id/pickImage"
            android:padding="7dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/large"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:saveEnabled="true"
                android:gravity="center_vertical"
                android:text="@string/large"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:saveEnabled="true"
                android:gravity="center_vertical"
                android:text="@string/medium"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/small"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:saveEnabled="true"
                android:gravity="center_vertical"
                android:text="@string/small"
                android:textStyle="bold"
                android:textSize="23sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/miniCompass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_below="@+id/pickImage"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:text="@string/miniCompass"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/autoMini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_below="@+id/miniCompass"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:text="@string/autoMini"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/allShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:layout_below="@id/allSetting"
        android:layout_centerHorizontal="true"
        android:background="@drawable/detail_share_gui">

        <LinearLayout
            android:id="@+id/whatsnew"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="7dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:weightSum="23">

            <ImageView
                android:id="@+id/whatsnewImage"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="6"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/whatsnewText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="17"
                android:gravity="center_vertical"
                android:typeface="monospace"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/whatsnew"
                android:textSize="27sp"
                android:textColor="@color/default_color_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shareView"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_below="@id/whatsnew"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:gravity="center"
            android:weightSum="4"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_instagram" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_share_fb" />

            <ImageView
                android:id="@+id/mail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_share_mail" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_share_full" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2.3dp"
        android:layout_marginStart="3.9dp"
        android:layout_marginEnd="3.9dp"
        android:foregroundGravity="bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/AdUnitBanner" />

</RelativeLayout>
