<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 By Geeks Empire.
  ~
  ~ Created by Elias Fazel on 1/30/20 4:30 PM
  ~ Last modified 11/11/19 7:26 PM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    android:background="@color/transparent"
    android:id="@+id/fullMessageItem">

    <net.geekstools.imageview.customshapes.ShapesImage
        android:id="@+id/theUserImage"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_round"
        android:background="@color/transparent"
        android:contentDescription="@string/theUserImageHint"
        apps:shapeDrawable="@drawable/circle" />

    <TextView
        android:id="@+id/theMessageSent"
        android:layout_width="43dp"
        android:layout_height="27dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/theUserImage"
        android:gravity="center"
        android:text="@string/messageSent"
        android:textColor="@color/android_default"
        android:textSize="12sp"
        android:typeface="monospace"
        android:background="@color/transparent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/seenByNumber"
        android:layout_width="43dp"
        android:layout_height="27dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/theMessageSent"
        android:gravity="center"
        android:lines="1"
        android:textColor="@color/default_color_game_light"
        android:textSize="12sp"
        android:typeface="monospace"
        android:background="@color/transparent"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/theUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/theUserImage"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:lines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/default_color_light"
        android:typeface="monospace"
        android:background="@color/transparent" />

    <EditText
        android:id="@+id/theTextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:scrollbars="vertical"
        android:layout_below="@id/theUserName"
        android:layout_toStartOf="@id/theUserImage"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal"
        android:textColor="@android:color/holo_red_light"
        android:typeface="sans"
        android:imeOptions="actionDone"
        android:focusable="auto"
        android:inputType="textImeMultiLine|textMultiLine"
        android:background="@color/transparent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@id/theTextMessage"
        android:layout_toStartOf="@id/theUserImage"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/editMessage"
        android:visibility="invisible"
        apps:backgroundTint="@color/default_color_light"
        apps:rippleColor="@color/default_color_game" />

    <ImageView
        android:id="@+id/theImageMessage"
        android:layout_width="99dp"
        android:layout_height="0dp"
        android:layout_below="@id/theTextMessage"
        android:layout_toStartOf="@id/theUserImage"
        android:padding="13dp"
        android:visibility="invisible"
        android:background="@color/transparent" />

</RelativeLayout>